Hexen II: Hammer of Thyrion

Development Progress	:
---------------------------

2012-06-02 (SVN):
    * sys_amiga.c, sys_dos.c, sys_win.c (Sys_FindFirst): Make sure that
      the string we pass to OS findfirst-like function stays persistent
      and doesn't lose context.

2012-06-02 (SVN):
    * sys_amiga.c (pattern_helper): Fixed infinite loop in the first for
      construct.
    * Extended Amiga/AROS support to h2ded and hexenworld client/server.

2012-06-02 (SVN):
    * Removed the beta/prerelease versioning stuff.

2012-06-02 (SVN):
    * sys_amiga.c: Added a pattern helper for Sys_FindFirst() to replace
      each occurence of "*" by "#?" which is what Amiga's MatchFirst api
      expects. Should fix game load/save on Amiga/AROS.

2012-06-02 (SVN):
    * docs/AUTHORS: Added Szilard Biro under contributors->coding for
      the Amiga/AROS support.
    * Updated ReleaseNotes file.

2012-06-02 (SVN):
    * engine/hexen2/sys_amiga.c: Support for Amiga (AROS), many thanks
      to Szilard Biro.
    * engine/hexen2/Makefile, scripts/makefile.inc: Add adjustments for
      aros.
    * updated version date stamp to 2012-06-02.

2012-06-01 (SVN):
    * h2patch/h2patch3.c, launcher/apply_patch.c: The patch process now
      outputs a description of the pak file it is processing so that the
      user can understand the reasons of a probable failure better.
    * launcher: bumped version to 1.0.8
    * updated version date stamp to 2012-06-01.

2012-06-01 (SVN):
    * Changed the place where DO_USERDIRS may be disabled on purpose for
      some platforms from quakefs.h to sys.h. Added proper DO_USERDIRS
      macro usage to hwmaster.

2012-05-31 (SVN):
    * quakefs.h: Added Amiga to list of platforms where we don't need
      user directories.

2012-05-31 (SVN):
    * gl_draw.c (Draw_CacheLoadingPic): When moving pixels, do not take
      the start point as data[3]: data[0], i.e. data itself, should be